Lab7 Solution Charge and Fix

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "authentication": "Windows",
             "startupObjectType": "Page",
             "breakOnError": true,
-            "schemaUpdateMode": "Recreate"
+            "schemaUpdateMode": "Synchronize"
         }
     ]
 }
